Anonymous | Login | 2021-01-18 07:33 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] | [ Issue History ] [ Print ] | ||||||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||||||
0026979 | Community | [OCCT] OCCT:Modeling Algorithms | public | 2015-12-11 01:42 | 2020-09-14 22:55 | ||||||||
Reporter | vanderzee | ||||||||||||
Assigned To | ifv | ||||||||||||
Priority | normal | Severity | major | ||||||||||
Status | assigned | Resolution | open | ||||||||||
Platform | Linux | OS | Ubuntu | OS Version | 12.04.5 LTS64bit | ||||||||
Product Version | [OCCT] 6.9.1 | ||||||||||||
Target Version | [OCCT] 7.6.0* | Fixed in Version | |||||||||||
Summary | 0026979: Parabola curve intersection with variety of surfaces produces incorrect results | ||||||||||||
Description | When I use GeomAPI_IntCS to try to compute the intersection of a trimmed parabola with a surface, I often get incorrect results. In all cases that I have encountered, the problem is that intersections that should be detected are not being detected. The results appear to be correct for several specific types of surfaces, namely Geom_ConicalSurface, Geom_CylindricalSurface, Geom_Plane, Geom_SphericalSurface, and Geom_RectangularTrimmedSurface based on these. However, the results are not correct for Geom_BezierSurface, Geom_BSplineSurface, Geom_ToroidalSurrface, Geom_SurfaceOfLinearExtrusion, and Geom_SurfaceofRevolution -- or at least for certain instances of these and a certain parabola. I do not include explicit tests of ConicalSurface and Geom_Plane here, but in my own testing of those, they seem to work correctly. The behavior is similar in several versions prior to 6.9.1, but I tested it in 6.9.1 to be sure that the problem still exists. | ||||||||||||
Steps To Reproduce | 1) Compile and link the attached C++ test against OpenCascade libraries. (I do not provide a make file, but required libraries are TKG2d, TKG3d, TKGeomAlgo, TKGeomBase, TKMath, and TKernel.) 2) Run the resulting executable. 3) Observe the results. The output states the expected results and the actual results. The expected results include the approximate location of the intersection points. In some cases the actual results agree with the expected results, but in many cases the actual results find no intersection points. | ||||||||||||
Tags | No tags attached. | ||||||||||||
Test case number | |||||||||||||
Attached Files | ![]() | ||||||||||||
![]() |
|||
Date Modified | Username | Field | Change |
2015-12-11 01:42 | vanderzee | New Issue | |
2015-12-11 01:42 | vanderzee | Assigned To | => msv |
2015-12-11 01:42 | vanderzee | File Added: testParabolaSurfaceIntersect.cpp | |
2015-12-11 09:48 | msv | Assigned To | msv => ifv |
2015-12-11 09:49 | msv | Status | new => assigned |
2015-12-11 09:50 | msv | Target Version | => 7.1.0 |
2016-10-28 11:54 | msv | Target Version | 7.1.0 => 7.2.0 |
2017-07-21 11:34 | msv | Target Version | 7.2.0 => 7.3.0 |
2017-12-05 17:09 | msv | Target Version | 7.3.0 => 7.4.0 |
2019-08-12 16:44 | msv | Target Version | 7.4.0 => 7.5.0 |
2020-09-14 22:55 | msv | Target Version | 7.5.0 => 7.6.0* |
Copyright © 2000 - 2021 MantisBT Team |