0026979: Parabola curve intersection with variety of surfaces produces incorrect results.

Method Intf_Tool::ParabBox now properly estimates the number of segments for a 3D parabola.
Fix input arguments of called Bnd_Box::Get method in Intf_Tool::HyprBox method.